<resources>

    <string-array name="input_array">
        <item>Manual Entry</item>
        <item>GPS</item>
        <item>Automatic</item>
    </string-array>

    <string-array name="activity_array">
        <item>Standing</item>
        <item>Walking</item>
        <item>Running</item>
        <item>Cycling</item>
        <item>Hiking</item>
        <item>Downhill Skiing</item>
        <item>Cross-Country Skiing</item>
        <item>Snowboarding</item>
        <item>Skating</item>
        <item>Swimming</item>
        <item>Mountain Biking</item>
        <item>Wheelchair</item>
        <item>Elliptical</item>
        <item>Other</item>
    </string-array>

    <string-array name="manual_array">
        <item>Date</item>
        <item>Time</item>
        <item>Duration</item>
        <item>Distance</item>
        <item>Calories</item>
        <item>Heart Rate</item>
        <item>Comment</item>
    </string-array>

    <string-array name="units">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string-array name="camOptions">
        <item>Open Camera</item>
        <item>Select from Gallery</item>
    </string-array>

    <string name="app_name">MyRuns</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="change">Change</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="phone">Phone</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="sex">Sex</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="class_text">Class</string>
    <string name="enter_your_class_year">Enter your class year</string>
    <string name="major">Major</string>
    <string name="enter_your_major">Enter your major</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="profilePref">profilePrefs</string>
    <string name="nameKey">nameKey</string>
    <string name="emailKey">emailKey</string>
    <string name="phoneKey">phoneKey</string>
    <string name="sexKey">sexKey</string>
    <string name="classKey">classKey</string>
    <string name="majorKey">majorKey</string>
    <string name="title_activity_main">My Runs</string>
    <string name="start">START</string>
    <string name="sync">SYNC</string>
    <string name="ok">Ok</string>
    <string name="settingsPref">settingsPref</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="calories">Calories</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="date_and_time">Date and Time</string>
    <string name="activity_type">Activity Type</string>
    <string name="input_type">Input Type</string>


</resources>
